[package]
name = "ahz"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.8"
notify = "4.0.17"
thiserror = "1.0.30"
widestring = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "3.1.8", features = ["derive"] }
windows-sys = { version = "0.35.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
] }
